--- a/app/index.html
+++ b/app/index.html
@@ -30,16 +30,16 @@
                 <div class="total-block">
                     <a href="#" class="img-head-block"><img src="img/Logo.png" alt="logo"></a>
                     <div class="main-box">
-                     <ul class="list">
-                         <li><a href="#">Products</a></li>
-                         <li><a href="#">Offers</a></li>
-                         <li><a href="#">Service</a></li>
-                         <li><a href="#">Contacts</a></li>
-                         <li><a href="#">Statistics</a></li>
-                     </ul>
-                    <div class="button-block">
-                        <a href="#" class="button-main chef-b">Callback</a>
-                    </div>
+                        <ul class="list">
+                            <li><a href="#">Products</a></li>
+                            <li><a href="#">Offers</a></li>
+                            <li><a href="#">Service</a></li>
+                            <li><a href="#">Contacts</a></li>
+                            <li><a href="#">Statistics</a></li>
+                        </ul>
+                        <div class="button-block">
+                            <a href="#" class="button-main chef-b">Callback</a>
+                        </div>
                         <div id="nav-icon2">
                             <span></span>
                             <span></span>
@@ -52,17 +52,40 @@
                     </div>
 
                 </div>
+                <div class="main-box mobile">
+                    <ul class="list">
+                        <li><a href="#">Products</a></li>
+                        <li><a href="#">Offers</a></li>
+                        <li><a href="#">Service</a></li>
+                        <li><a href="#">Contacts</a></li>
+                        <li><a href="#">Statistics</a></li>
+                    </ul>
+                    <div class="button-block">
+                        <a href="#" class="button-main chef-b">Callback</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </section>
-<section class="title before-box background-image" style="background-image: url(img/title.png)">
+<section class="title before-box background-image service-main" style="background-image: url(img/serv-main-bg.png)">
     <div class="title-box">
-        <h1>Antal Group Limited</h1>
-        <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua</h2>
+        <h1>products delivery service</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
-    <div class="mouse"><img src="img/mouse.png" alt=""></div>
+    <div class="mouse">
+        <div></div>
+        <div></div>
+        <div></div>пгдз
+    </div>
+</section>
+<section class="video service-video" style=" background-image: none;">
+    <div class="video-content">
+        <div class="videoWrapper videoWrapper169 js-videoWrapper">
+            <iframe class="videoIframe js-videoIframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="https://www.youtube.com/embed/EL0P6GFgq60?autoplay=1& modestbranding=1&rel=0&hl=sv"></iframe>
+            <button class="videoPoster js-videoPoster" style="  background-image:url(img/men.png);"><span class="overlay"></span></button>
+        </div>
+    </div>
 </section>
 <section class="evolution-box background-image" style="background-image: url(img/s-bg.png);">
     <div class="container">
@@ -86,98 +109,90 @@
             </p>
         </div>
         <div class="row">
-         <div class="items">
-         <div class="item">
-             <p>2008</p>
-             <p> Iron Ore Pellets
-                 Iron Ore
-                 Foundry Pig Iron
-                 Steel-making Pig Iron
+            <div class="items">
+                <div class="item">
+                    <p>2008</p>
+                    <p> Iron Ore Pellets
+                        Iron Ore
+                        Foundry Pig Iron
+                        Steel-making Pig Iron
 
-                 Iron Ore
-                 Foundry Pig Iron
-                 Steel-making Pig Iron
+                        Iron Ore
+                        Foundry Pig Iron
+                        Steel-making Pig Iron
 
-                 Iron Ore
-                 Foundry Pig Iron
-                 Steel-making Pig Iron
+                        Iron Ore
+                        Foundry Pig Iron
+                        Steel-making Pig Iron
 
-                 Iron Ore
-                 Foundry Pig Iron
-                 Steel-making Pig Iron
-             </p>
-         </div>
-             <div class="item">
-                 <p>2009</p>
-                 <p> Iron Ore Pellets
-                     Iron Ore
-                     Foundry Pig Iron
-                     Steel-making Pig Iron
-                 </p>
-             </div>
-             <div class="item">
-                 <p>2010</p>
-                 <p> Titanium Sponge
-                     Titanium Ingots
-                     Titanium Turning/Scrap
-                 </p>
-             </div>
-             <div class="item">
-                 <p>2011</p>
-                 <p>  Steel Billets
-                     Steel Bars
-                     Reinforsing Steel Bars
-                     Steel Tubes
-                 </p>
-             </div>
-             <div class="item">
-                 <p>2014</p>
-                 <p>  FerroSilicon
-                     Ferro Manganese
-                     Ferro Silico-Manganese
-                 </p>
-             </div>
-             <div class="item">
-                 <p>2015</p>
-                 <p> FerroTitanium
-                 </p>
-             </div>
-             <div class="item">
-                 <p>2016</p>
-                 <p> Manufacture
-                     of Equipment
-                 </p>
-             </div>
-             <div class="item">
-                 <p>2017</p>
-                 <p> Aluminium Scrap
-                     Cans (UBC)
-                 </p>
-             </div>
+                        Iron Ore
+                        Foundry Pig Iron
+                        Steel-making Pig Iron
+                    </p>
+                </div>
+                <div class="item">
+                    <p>2009</p>
+                    <p> Iron Ore Pellets
+                        Iron Ore
+                        Foundry Pig Iron
+                        Steel-making Pig Iron
+                    </p>
+                </div>
+                <div class="item">
+                    <p>2010</p>
+                    <p> Titanium Sponge
+                        Titanium Ingots
+                        Titanium Turning/Scrap
+                    </p>
+                </div>
+                <div class="item">
+                    <p>2011</p>
+                    <p>  Steel Billets
+                        Steel Bars
+                        Reinforsing Steel Bars
+                        Steel Tubes
+                    </p>
+                </div>
+                <div class="item">
+                    <p>2014</p>
+                    <p>  FerroSilicon
+                        Ferro Manganese
+                        Ferro Silico-Manganese
+                    </p>
+                </div>
+                <div class="item">
+                    <p>2015</p>
+                    <p> FerroTitanium
+                    </p>
+                </div>
+                <div class="item">
+                    <p>2016</p>
+                    <p> Manufacture
+                        of Equipment
+                    </p>
+                </div>
+                <div class="item">
+                    <p>2017</p>
+                    <p> Aluminium Scrap
+                        Cans (UBC)
+                    </p>
+                </div>
 
-         </div>
+            </div>
         </div>
     </div>
 
 </section>
 <section class="our">
-<div class="back-letter">
-    <img src="img/our-mission.png" alt="">
-</div>
-<h3>our Mission</h3>
+    <div class="back-letter">
+        <img src="img/our-mission.png" alt="">
+    </div>
+    <h3>our Mission</h3>
     <p>Our products can be utilized in a variety of industrial sectors from aerospace, chemical, Desalination plants, vehicles, sports equipment, medical and other hi-tech manufacturing processes.
         By widening our circle of connections and expanding our knowledge base Antal Group aims to offer a service to meet the demanding requirement in an ever changing business world.
         We also can offer a service in detailing and design of steel structures using the latest 3d modeling technology. Our network of specialists can offer a competitive & professional service.</p>
 </section>
-<section class="video">
-    <h3>APPEAL OF THE PRESIDENT</h3>
-    <div class="video-content">
-        <div class="videoWrapper videoWrapper169 js-videoWrapper">
-            <iframe class="videoIframe js-videoIframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="https://www.youtube.com/embed/EL0P6GFgq60?autoplay=1& modestbranding=1&rel=0&hl=sv"></iframe>
-            <button class="videoPoster js-videoPoster" style="background-image:url(img/men.png);"><span class="overlay"></span></button>
-        </div>
-    </div>
-</section>
+
 <section class="footer">
     <div class="container">
         <div class="row">
@@ -187,12 +202,12 @@
                         <div class="scroll-text">
                             <h2 class="scroll-title">заголовок seo-текста</h2>
                             <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, dignissimos dolorem iusto laborum placeat quas ratione reiciendis repellat similique totam! Animi aperiam assumenda blanditiis consectetur eveniet expedita nulla quae rerum!
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, dignissimos dolorem iusto laborum placeat quas ratione reiciendis repellat similique totam! Animi aperiam assumenda blanditiis consectetur eveniet expedita nulla quae rerum!
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, dignissimos dolorem iusto laborum placeat quas ratione reiciendis repellat similique totam! Animi aperiam assumenda blanditiis consectetur eveniet expedita nulla quae rerum!
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, dignissimos dolorem iusto laborum placeat quas ratione reiciendis repellat similique totam! Animi aperiam assumenda blanditiis consectetur eveniet expedita nulla quae rerum!
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, dignissimos dolorem iusto laborum placeat quas ratione reiciendis repellat similique totam! Animi aperiam assumenda blanditiis consectetur eveniet expedita nulla quae rerum!
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, dignissimos dolorem iusto laborum placeat quas ratione reiciendis repellat similique totam! Animi aperiam assumenda blanditiis consectetur eveniet expedita nulla quae rerum!
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, dignissimos dolorem iusto laborum placeat quas ratione reiciendis repellat similique totam! Animi aperiam assumenda blanditiis consectetur eveniet expedita nulla quae rerum!
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, dignissimos dolorem iusto laborum placeat quas ratione reiciendis repellat similique totam! Animi aperiam assumenda blanditiis consectetur eveniet expedita nulla quae rerum!
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, dignissimos dolorem iusto laborum placeat quas ratione reiciendis repellat similique totam! Animi aperiam assumenda blanditiis consectetur eveniet expedita nulla quae rerum!
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, dignissimos dolorem iusto laborum placeat quas ratione reiciendis repellat similique totam! Animi aperiam assumenda blanditiis consectetur eveniet expedita nulla quae rerum!
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, dignissimos dolorem iusto laborum placeat quas ratione reiciendis repellat similique totam! Animi aperiam assumenda blanditiis consectetur eveniet expedita nulla quae rerum!
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, dignissimos dolorem iusto laborum placeat quas ratione reiciendis repellat similique totam! Animi aperiam assumenda blanditiis consectetur eveniet expedita nulla quae rerum!
                             </p>
                         </div>
                     </div>
@@ -240,7 +255,7 @@
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>-->
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>-->
 
-<script src="js/es6/common.js"></script>
+<script src="js/es5/common.js"></script>
 
 </body>
 
