--- a/app/cooperation.html
+++ b/app/cooperation.html
@@ -4,13 +4,13 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Копирайтер - TexTop - качественный контент для Вашего бизнеса</title>
+    <title>Антал</title>
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta property="og:image" content="path/to/image.jpg">
-    <link rel="shortcut icon" href="img/favicon/png_fav.png" type="image/x-icon">
-    <link rel="apple-touch-icon" href="img/favicon/png_fav.png">
+    <link rel="shortcut icon" href="img/favicon/Antal_favi.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="img/favicon/Antal_favi.png">
     <link rel="stylesheet" href="libs/bootstrap-grid/bootstrap-grid.css">
     <link rel="stylesheet" href="libs/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/reset.css">
@@ -68,131 +68,43 @@
         </div>
     </div>
 </section>
-<section class="title before-box background-image service-main" style="background-image: url(img/serv-main-bg.png)">
-    <div class="title-box">
-        <h1>products delivery service</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+
+<section class="our coop-our">
+    <div class="back-letter">
+        <img src="img/cooperation.png" alt="">
     </div>
-    <div class="mouse">
-        <div></div>
-        <div></div>
-        <div></div>пгдз
-    </div>
-</section>
-<section class="video service-video" style=" background-image: none;">
-    <div class="video-content">
-        <div class="videoWrapper videoWrapper169 js-videoWrapper">
-            <iframe class="videoIframe js-videoIframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="https://www.youtube.com/embed/EL0P6GFgq60?autoplay=1& modestbranding=1&rel=0&hl=sv"></iframe>
-            <button class="videoPoster js-videoPoster" style="  background-image:url(img/men.png);"><span class="overlay"></span></button>
-        </div>
-    </div>
-</section>
-<section class="evolution-box background-image" style="background-image: url(img/s-bg.png);">
     <div class="container">
         <div class="row">
-            <div class="double-box">
-                <div class="overlay">
-                    <img src="img/d.png" alt="">
-                    <img src="img/antal-box.png" alt="">
-                </div>
-                <div class="text-box">
-                    <h3>EVOLUTION STAGES</h3>
-                    <p>Antal Group limited is a company established by professionals with a lifetime of experience gained in engineering and procurement . Under the direction of a capable contingent made up of numerous specialists with rich practical experience we can offer a high quality service in accordance with international standards.
-                        The excellent performance and stable quality has been witnessed by users worldwide. The company mainly engaged in the manufacture of titanium ingots and slabs the trade of titanium profiles (plate, tube, etc). and steel pipes.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <p class="p700">
-                Antal Group limited is a company established by professionals with a lifetime of experience gained in engineering and procurement. Under the direction of a capable contingent made up of numerous specialists with rich practical experience we can offer a high.
-            </p>
-        </div>
-        <div class="row">
-            <div class="items">
-                <div class="item">
-                    <p>2008</p>
-                    <p> Iron Ore Pellets
-                        Iron Ore
-                        Foundry Pig Iron
-                        Steel-making Pig Iron
-
-                        Iron Ore
-                        Foundry Pig Iron
-                        Steel-making Pig Iron
-
-                        Iron Ore
-                        Foundry Pig Iron
-                        Steel-making Pig Iron
-
-                        Iron Ore
-                        Foundry Pig Iron
-                        Steel-making Pig Iron
-                    </p>
-                </div>
-                <div class="item">
-                    <p>2009</p>
-                    <p> Iron Ore Pellets
-                        Iron Ore
-                        Foundry Pig Iron
-                        Steel-making Pig Iron
-                    </p>
-                </div>
-                <div class="item">
-                    <p>2010</p>
-                    <p> Titanium Sponge
-                        Titanium Ingots
-                        Titanium Turning/Scrap
-                    </p>
-                </div>
-                <div class="item">
-                    <p>2011</p>
-                    <p>  Steel Billets
-                        Steel Bars
-                        Reinforsing Steel Bars
-                        Steel Tubes
-                    </p>
-                </div>
-                <div class="item">
-                    <p>2014</p>
-                    <p>  FerroSilicon
-                        Ferro Manganese
-                        Ferro Silico-Manganese
-                    </p>
-                </div>
-                <div class="item">
-                    <p>2015</p>
-                    <p> FerroTitanium
-                    </p>
-                </div>
-                <div class="item">
-                    <p>2016</p>
-                    <p> Manufacture
-                        of Equipment
-                    </p>
-                </div>
-                <div class="item">
-                    <p>2017</p>
-                    <p> Aluminium Scrap
-                        Cans (UBC)
-                    </p>
-                </div>
-
-            </div>
-        </div>
+            <h3>Cooperation</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+         </div>
     </div>
 
 </section>
-<section class="our">
-    <div class="back-letter">
-        <img src="img/our-mission.png" alt="">
+<section class="coop-double" >
+    <div class="left inner-inner" style="background-image: url(img/coop1.png);">
+        <div class="left-inner inner" >
+            <h4>For manufacturers</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            <div class="button-block">
+                <a href="#" class="button-main chef-b">Cooperate</a>
+            </div>
+        </div>
     </div>
-    <h3>our Mission</h3>
-    <p>Our products can be utilized in a variety of industrial sectors from aerospace, chemical, Desalination plants, vehicles, sports equipment, medical and other hi-tech manufacturing processes.
-        By widening our circle of connections and expanding our knowledge base Antal Group aims to offer a service to meet the demanding requirement in an ever changing business world.
-        We also can offer a service in detailing and design of steel structures using the latest 3d modeling technology. Our network of specialists can offer a competitive & professional service.</p>
+    <div class="right inner-inner" style="background-image: url(img/coop2.png);">
+        <div class="right-inner inner" >
+            <h4>For clients</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            <div class="button-block">
+                <a href="#" class="button-main chef-b">Order now</a>
+            </div>
+        </div>
+    </div>
 </section>
-
 <section class="footer">
     <div class="container">
         <div class="row">
@@ -236,6 +148,9 @@
             </div>
         </div>
     </div>
+</section>
+<section class="under-footer">
+    <p>Copyright © 2018 Antal Group Limited. All right reserved. </p>
 </section>
 
 <script src="libs/jquery/jquery.js"></script>
