--- a/app/main.html
+++ b/app/main.html
@@ -184,10 +184,15 @@
 <div class="back-letter">
     <img src="img/our-mission.png" alt="">
 </div>
-<h3>our Mission</h3>
-    <p>Our products can be utilized in a variety of industrial sectors from aerospace, chemical, Desalination plants, vehicles, sports equipment, medical and other hi-tech manufacturing processes.
-        By widening our circle of connections and expanding our knowledge base Antal Group aims to offer a service to meet the demanding requirement in an ever changing business world.
-        We also can offer a service in detailing and design of steel structures using the latest 3d modeling technology. Our network of specialists can offer a competitive & professional service.</p>
+    <div class="container">
+        <div class="row">
+            <h3>our Mission</h3>
+            <p>Our products can be utilized in a variety of industrial sectors from aerospace, chemical, Desalination plants, vehicles, sports equipment, medical and other hi-tech manufacturing processes.
+                By widening our circle of connections and expanding our knowledge base Antal Group aims to offer a service to meet the demanding requirement in an ever changing business world.
+                We also can offer a service in detailing and design of steel structures using the latest 3d modeling technology. Our network of specialists can offer a competitive & professional service.</p>
+        </div>
+    </div>
+
 </section>
 <section class="video" style=" background-image: url(img/the-city-london.png);">
     <h3>APPEAL OF THE PRESIDENT</h3>
@@ -241,6 +246,9 @@
             </div>
         </div>
     </div>
+</section>
+<section class="under-footer">
+    <p>Copyright © 2018 Antal Group Limited. All right reserved. </p>
 </section>
 
 <script src="libs/jquery/jquery.js"></script>
