--- a/app/product-card.html
+++ b/app/product-card.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Statistics</title>
+    <title>Product-cart</title>
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -21,7 +21,6 @@
     <link rel="stylesheet" href="libs/mmenu/mmenu.css">
     <link rel="stylesheet" href="css/main.min.css">
 </head>
-
 <body>
 <section class="header">
     <div class="head-section">
@@ -47,10 +46,8 @@
                             <span></span>
                             <span></span>
                             <span></span>
-
                         </div>
                     </div>
-
                 </div>
                 <div class="main-box mobile">
                     <ul class="list">
@@ -68,116 +65,107 @@
         </div>
     </div>
 </section>
-<section class="article-statistic">
+<section class="title before-box background-image catalog-products-title product-cart-title" style="background-image: url(img/prod-card.png);">
     <ul class="breadcrumbs-origin">
         <li>
             <a href="#">home</a>
         </li>
         <li>
-            <a href="#"> statistics </a>
+            <a href="#"> Production</a>
+        </li>   <li>
+            <a href="#"> category title</a>
+        </li>   <li>
+            <a href="#"> product</a>
         </li>
-        <li>
-            <a href="#"> article </a>
-        </li>
-
     </ul>
-    <h5>How to clean that oxyfuel cutting tip</h5>
-    <p>28.04.2018</p>
+    <div class="title-box">
+        <h3> GASEOUS ARGON HIGH QUALITY
+            GOST 10157-79  </h3>
+        <p>Lorem ipsum dolor sit ameLorem ipsum dolor sit amet,
+            consectetur adipisicing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="button-block">
+            <a href="#" class="button-main chef-b">Order now</a>
+        </div>
+    </div>
 </section>
-<section class="article-all">
+<section class="slider-section">
     <div class="container">
         <div class="row">
-            <div class="all">
-                <div class="video-box">
-                    <div class="video-content">
-                        <div class="videoWrapper videoWrapper169 js-videoWrapper">
-                            <iframe class="videoIframe js-videoIframe" src="" frameborder="0" allowtransparency="true" allowfullscreen="" data-src="https://www.youtube.com/embed/EL0P6GFgq60?autoplay=1&amp; modestbranding=1&amp;rel=0&amp;hl=sv"></iframe>
-                            <button class="videoPoster js-videoPoster" style="background-image:url(img/static-video2.png);"><span class="overlay"></span></button>
-                        </div>
-                    </div>
+            <div class="blue">
+                <div class="slider slider-for">
+                    <div><div class="picture"><img src="img/prsl1.png" alt="picture"></div></div>
+                    <div><div class="picture"><img src="img/prsl2.png" alt="picture"></div></div>
+                    <div><div class="picture"><img src="img/prsl3.png" alt="picture"></div></div>
+                    <div><div class="picture"><img src="img/prsl4.png" alt="picture"></div></div>
+                    <div><div class="picture"><img src="img/prsl5.png" alt="picture"></div></div>
                 </div>
-
-                <p class="bold-p">Vaporizing foil actuator welding (VFAW) uses
-                    the pressure from an electrically driven explosion to
-                    impact-weld dissimilar metals at high speed. It does this by
-                    changing a thin metal foil from a solid to a gas and using the
-                    pressure to push one base metal—over a short, controlled
-                    distance—toward another base metal. This all happens within
-                    millionths of a second, with impact speeds about twice the speed
-                    of sound in air.</p>
-                <p>
-                    Engineers during the Great War noticed something odd about the
-                    shrapnel that stuck to armored tanks: It wasn’t simply inserted
-                    into the tank’s side. Force from the impact caused material on
-                    the tank and shrapnel to fuse together. That is, the impact created a weld.
-                 </p>
-                <p>
-                    Engineers during the Great War noticed something odd about the
-                    shrapnel that stuck to armored tanks: It wasn’t simply inserted
-                    into the tank’s side. Force from the impact caused material on
-                    the tank and shrapnel to fuse together. That is, the impact created a weld.
-                </p>
-                <p>
-                    From this came a process now known as explosion welding.
-                    To perform it, a controlled detonation forces one workpiece into
-                    another workpiece at high velocity. Patented by DuPont in the 1960s,
-                    explosion welding proved.to be a good way to join two or more metals
-                    that couldn’t be easily or efficiently welded by traditional methods
-                    like arc welding.
-                </p>
-                <p>
-                    The resulting joint is a sight to behold for anyone versed in welding.
-                    The process doesn’t heat the material, which eliminates most problems
-                    inherent in welding dissimilar materials, like different melting temperatures
-                    and mixing-induced intermetallic compounds that can reduce weld quality dramatically.
-                    Want to join aluminum to high-strength steel? Perhaps two aluminum grades that
-                    can’t be thermally joined? No problem.
-                </p>
-                <p>With explosion welding, surface material between the two base metals is violently expelled,
-                    and you’re left with clean surfaces that fuse together under pressure to form a weld of the
-                    same integrity as its parent materials. It’s a thing of welding beauty—except for
-                    the explosives. They don’t make the process very easy for the average fabricator to adopt.
-                </p>
-                <p>
-                    This was top of mind in 2011 for Professor Glenn S. Daehn and Research Scientist Anupam Vivek
-                    at the Impulse Manufacturing Laboratory at The Ohio State University’s College of Engineering.
-                    They were studying electromagnetic forming, a process that sends a large pulse current from a
-                    capacitor bank through a solenoid coil. The forming action comes from the force created by two
-                    opposing electrical fields concentrated in a very small area.
-                </p>
-                <div class="double-image">
-                    <img src="img/double1.png" alt="image">
-                    <img src="img/double2.png" alt="image">
+                <div class="slider slider-nav">
+                    <div><div class="picture"><img src="img/prsl1.png" alt="picture"></div></div>
+                    <div><div class="picture"><img src="img/prsl2.png" alt="picture"></div></div>
+                    <div><div class="picture"><img src="img/prsl3.png" alt="picture"></div></div>
+                    <div><div class="picture"><img src="img/prsl4.png" alt="picture"></div></div>
+                    <div><div class="picture"><img src="img/prsl5.png" alt="picture"></div></div>
                 </div>
-                <p class="bol-up">
-                    Developing VFAW for Production
-                </p>
-                <p>
-                    To bring this technology to market, the OSU lab is working with various
-                    industry and government partners, including Honda, Ford, Ashland, Oak Ridge National Laboratory,
-                    Pacific Northwest National Laboratory, Arconic, Jefferson Industries Corp., Magna,
-                    the Department of Energy, the National Science Foundation, and the state of Ohio,
-                    as well as specialty machine builder Coldwater Machine Co. in Coldwater, Ohio.
-                </p>
-                <p>
-                    Coldwater is working with OSU to develop and perfect a pedestal machine that feeds foil
-                    actuator material (VFAW’s consumable) below the flyer base material. As Mike Spodar,
-                    Coldwater’s senior welding engineer, explained, “To industrialize this system, we’ve
-                    developed a feed system to deliver an individual foil coupon to the weld area. We had
-                    to establish what size and shape that foil will be, determine the orientation,
-                    and a way to deliver it.”
-                </p>
-                <p>He added that the process can be noisy, so an enclosure or another sound abatement system may
-                    be necessary or desired in a production facility. Thin-gauge joining occurs with a “pop,”
-                    but when the system joins thicker material—flyer materials up to 0.25 in. thick have been
-                    tested—the pop becomes louder.</p>
             </div>
         </div>
     </div>
 </section>
+<section class="product-information">
+    <div class="container">
+        <div class="row">
+          <h4>Product information</h4>
+            <p>
+                A metal (from Greek μέταλλον métallon, "mine,
+                quarry, metal") is a material (an element,
+                compound, or alloy) that is typically hard
+                when in solid state, opaque, shiny, and has
+                good electrical and thermal conductivity.
+                Metals are generally malleable—that is,
+                they can be hammered or pressed permanently
+                out of shape without breaking or cracking—as
+                well as fusible (able to be fused or melted)
+                and ductile (able to be drawn out into a thin wire).
+                Around 90 of the 118 elements in the periodic table
+                are metals; the others are nonmetals or metalloids,
+                though elements near the boundaries of each category
+                have been assigned variably to either (hence the
+                lack of an exact count). Some elements appear in
+                both metallic and non-metallic forms. Astrophysicists
+                use the term "metal" to refer collectively to
+                all elements in a star that are heavier than the
+                lightest two, hydrogen and helium, and not just
+                traditional metals. A star fuses lighter atoms,
+                mostly hydrogen and helium, to make heavier atoms
+                over its lifetime.
+            </p>
+        </div>
+    </div>
+</section>
+<section class="product-form background-image" style="background-image: url(img/order.png);">
+    <div class="container">
+        <div class="row">
+            <h4>Make an order</h4>
+            <p>We will call you back to clarify your order within 24 hours.</p>
+            <form action="">
+                <div class="in-box">
+                    <label >Full Name</label>
+                    <input type="text" placeholder="Write your full name">
+                </div>
+                <div class="in-box">
+                    <label >Telephone</label>
+                    <input type="text" placeholder="Write your phone number">
+                </div>
+                <div class="button-block">
+                    <input type="submit" class="button-main chef-b" value="Submit your application">
+                </div>
 
-
-
+            </form>
+        </div>
+    </div>
+</section>
 <section class="footer">
     <div class="container">
         <div class="row">
@@ -214,10 +202,6 @@
                         <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
                     </div>
                 </div>
-            </div>
-            <div class="brand">
-                <p>Copyright © MyChef 2018</p>
-                <p>by Navix</p>
             </div>
         </div>
     </div>
